Sun Oct 20 13:58:47 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/ruby.h (rb_obj_wb_unprotect, rb_obj_written),
	  (rb_obj_write): suppress unused-parameter warnings.

Sun Oct 20 10:32:48 2013  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems:  Update RubyGems to master 0886307.  This commit
	  improves documentation and should bring ruby above 75% documented on
	  rubyci.

Sun Oct 20 09:30:56 2013  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems:  Update to RubyGems master 3de7e0f.  Changes:

	  Only attempt to build extensions for newly-installed gems.  This
	  prevents compilation attempts at gem activation time for gems that
	  already have extensions built.

	  Fix crash in the dependency resolver for dependencies that cannot be
	  resolved.

	* test/rubygems:  ditto.

Sun Oct 20 05:24:29 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* variable.c (rb_class2name): should return real class name, not
	  singleton class or iclass.

Sun Oct 20 04:18:48 2013  Aman Gupta <ruby@tmm1.net>

	* variable.c (rb_class2name): call rb_tmp_class_path() directly to
	  avoid extra rb_str_dup() from rb_class_name().

Sat Oct 19 19:59:02 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32/file.c (code_page): use simple array instead of st_table.

	* encoding.c (rb_locale_encindex): defer initialization of win32 code
	  page table until encoding db loaded.

Sat Oct 19 08:25:05 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c: fix rb_objspace_t.
	  * make "struct heap" and move most of variables
	    in rb_objspace_t::heap.
	  * rename rb_objspace_t::heap::sorted to
	    rb_objspace_t::heap_sorted_pages
	    and make a macro heap_sorted_pages.
	  * rename rb_objspace_t::heap::range to
	    rb_objspace_t::heap_range and rename macros
	    lomem/himem to heap_lomem/heap_himem.

Sat Oct 19 07:14:40 2013  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems:  Update to RubyGems master 42543b6.  Changes:

	  Fix `gem update` for gems with multiple platforms.
